# doublespeak

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  TODO.txt  doublespeak.py  logo.txt  meta_llama_llama_3_2_3b_instruct_fp16.py  poc_chat.py  pyproject.toml  test.py  test_doublespeak.py
examples/: example.py  gpt2.md  smollm3-3b.md
exp/: opening_code.txt  output_article_bad.txt  output_article_good.txt  output_smollm3b_code.txt  poc_chat.py  poc_ds.py  poc_eos.py  vitek.txt
test/: opening_article.txt  output_smollm3b_article.txt  output_smollm3b_code.txt
