# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doublespeak"
version = "0.1.2"
authors = [
  { name="Franatrtur", email="franatrtur@gmail.com" },
]
description = "LLM steganography. Hiding secrets within natural text."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "accelerate>=1.10.1",
    "torch>=2.8.0",
    "transformers==4.57.0"
]


# This is where you define your command-line script
[project.scripts]
doublespeak = "doublespeak:main"